[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Interface/Window/SmallWindow/SmallWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Interface/Window/RocketInspector/InfoBox/InfoBox.gd" type="Script" id=2]
[ext_resource path="res://Objects/Interface/Theme/small_window_theme.tres" type="Theme" id=4]

[node name="InfoBox" type="Node2D"]
visible = false
position = Vector2( 0, 40 )
script = ExtResource( 2 )

[node name="SmallWindow" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -201.0
margin_right = 201.0
margin_bottom = 122.0
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 4 )

[node name="NinePatchRect" parent="SmallWindow/MarginContainer" index="0"]
margin_right = 394.0
margin_bottom = 115.0

[node name="MarginContainer" parent="SmallWindow/MarginContainer" index="1"]
margin_right = 394.0
margin_bottom = 115.0

[node name="ScrollContainer" type="ScrollContainer" parent="SmallWindow/MarginContainer/MarginContainer" index="0"]
margin_left = 8.0
margin_top = 8.0
margin_right = 378.0
margin_bottom = 99.0
__meta__ = {
"_edit_lock_": true
}

[node name="GridContainer" type="GridContainer" parent="SmallWindow/MarginContainer/MarginContainer/ScrollContainer"]
margin_right = 202.0
margin_bottom = 77.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 2
__meta__ = {
"_edit_lock_": true
}

[node name="NameKey" type="Label" parent="SmallWindow/MarginContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_right = 85.0
margin_bottom = 15.0
text = "Name Key"

[node name="NameValue" type="Label" parent="SmallWindow/MarginContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 101.0
margin_right = 202.0
margin_bottom = 15.0
text = "Name Value"

[node name="MassKey" type="Label" parent="SmallWindow/MarginContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_top = 31.0
margin_right = 85.0
margin_bottom = 46.0
text = "Mass Key"

[node name="MassValue" type="Label" parent="SmallWindow/MarginContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 101.0
margin_top = 31.0
margin_right = 202.0
margin_bottom = 46.0
text = "Mass Value"

[node name="SizeKey" type="Label" parent="SmallWindow/MarginContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_top = 62.0
margin_right = 85.0
margin_bottom = 77.0
text = "Size Key"

[node name="SizeValue" type="Label" parent="SmallWindow/MarginContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 101.0
margin_top = 62.0
margin_right = 202.0
margin_bottom = 77.0
text = "Size Value"

[editable path="SmallWindow"]
